--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,10 @@
         "thread": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "forward_list": "cpp",
+        "unordered_set": "cpp",
+        "shared_mutex": "cpp",
+        "cfenv": "cpp"
     }
 }
