--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,23 @@
 .vscode/settings.json
-.txt
-loop_fun_src/build/
-data_files/
+*.txt
+*.pdf
+*.so
+*.bdb
+*.bo
+*.svg
+*.png
+*.make
+*.gz
+*.aux
+*.zip
+*.tar.gz
+*.tex
+*.fls
+*.fdb_latexmk
+*.log
+loop_fun_src/build/CMakeCache.txt
 loop_fun_src/build/libDDM_khepera_loop_function.so
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function.dir/build.make
 loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function.dir/DDM_khepera_loop_function.cpp.o
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function.dir/link.txt
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function_autogen.dir/ParseCache.txt
