--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,61 @@
-.vscode/settings.json
-.txt
-loop_fun_src/build/
-data_files/
+*.vscode/settings.json
+*.txt
+/home/soma1701/installations/hierarchies_to_scale/loop_fun_src/
+*.so
+buzz_scripts/ddm_khepera.bdb
+loop_fun_src/build/cmake_install.cmake
+loop_fun_src/build/CMakeCache.txt
 loop_fun_src/build/libDDM_khepera_loop_function.so
+loop_fun_src/build/Makefile
+loop_fun_src/build/CMakeFiles/CMakeDirectoryInformation.cmake
+loop_fun_src/build/CMakeFiles/CMakeOutput.log
+loop_fun_src/build/CMakeFiles/CMakeRuleHashes.txt
+loop_fun_src/build/CMakeFiles/Makefile.cmake
+loop_fun_src/build/CMakeFiles/Makefile2
+loop_fun_src/build/CMakeFiles/progress.marks
+loop_fun_src/build/CMakeFiles/TargetDirectories.txt
+loop_fun_src/build/CMakeFiles/3.16.5/CMakeCCompiler.cmake
+loop_fun_src/build/CMakeFiles/3.16.5/CMakeCXXCompiler.cmake
+loop_fun_src/build/CMakeFiles/3.16.5/CMakeDetermineCompilerABI_C.bin
+loop_fun_src/build/CMakeFiles/3.16.5/CMakeDetermineCompilerABI_CXX.bin
+loop_fun_src/build/CMakeFiles/3.16.5/CMakeSystem.cmake
+loop_fun_src/build/CMakeFiles/3.16.5/CompilerIdC/a.out
+loop_fun_src/build/CMakeFiles/3.16.5/CompilerIdC/CMakeCCompilerId.c
+loop_fun_src/build/CMakeFiles/3.16.5/CompilerIdCXX/a.out
+loop_fun_src/build/CMakeFiles/3.16.5/CompilerIdCXX/CMakeCXXCompilerId.cpp
+loop_fun_src/build/CMakeFiles/3.22.1/CMakeCCompiler.cmake
+loop_fun_src/build/CMakeFiles/3.22.1/CMakeCXXCompiler.cmake
+loop_fun_src/build/CMakeFiles/3.22.1/CMakeDetermineCompilerABI_C.bin
+loop_fun_src/build/CMakeFiles/3.22.1/CMakeDetermineCompilerABI_CXX.bin
+loop_fun_src/build/CMakeFiles/3.22.1/CMakeSystem.cmake
+loop_fun_src/build/CMakeFiles/3.22.1/CompilerIdC/a.out
+loop_fun_src/build/CMakeFiles/3.22.1/CompilerIdC/CMakeCCompilerId.c
+loop_fun_src/build/CMakeFiles/3.22.1/CompilerIdCXX/a.out
+loop_fun_src/build/CMakeFiles/3.22.1/CompilerIdCXX/CMakeCXXCompilerId.cpp
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function.dir/build.make
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function.dir/cmake_clean.cmake
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function.dir/compiler_depend.internal
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function.dir/compiler_depend.make
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function.dir/compiler_depend.ts
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function.dir/CXX.includecache
 loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function.dir/DDM_khepera_loop_function.cpp.o
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function.dir/DDM_khepera_loop_function.cpp.o.d
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function.dir/depend.internal
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function.dir/depend.make
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function.dir/DependInfo.cmake
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function.dir/flags.make
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function.dir/link.txt
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function.dir/progress.make
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function.dir/DDM_khepera_loop_function_autogen/mocs_compilation.cpp.o
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function.dir/DDM_khepera_loop_function_autogen/mocs_compilation.cpp.o.d
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function_autogen.dir/AutogenInfo.json
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function_autogen.dir/AutogenUsed.txt
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function_autogen.dir/build.make
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function_autogen.dir/cmake_clean.cmake
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function_autogen.dir/compiler_depend.make
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function_autogen.dir/compiler_depend.ts
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function_autogen.dir/DependInfo.cmake
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function_autogen.dir/ParseCache.txt
+loop_fun_src/build/CMakeFiles/DDM_khepera_loop_function_autogen.dir/progress.make
+loop_fun_src/build/DDM_khepera_loop_function_autogen/moc_predefs.h
+loop_fun_src/build/DDM_khepera_loop_function_autogen/mocs_compilation.cpp
